--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "animate.css": "^4.1.1",
+    "clsx": "^2.1.1",
     "firebase": "^10.12.2",
+    "framer-motion": "^11.3.8",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^7.1.1",
     "react-intersection-observer": "^9.10.3",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
