--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "@vercel/analytics": "^1.4.1",
     "animate.css": "^4.1.1",
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
